--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 server.port=8082
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.datasource.url=jdbc:postgresql://192.168.99.100/posts
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.jpa.generate-ddl=true
