--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,18 @@
 server.port=8082
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.main.allow-bean-definition-overriding=true
 
 spring.datasource.url=jdbc:postgresql://192.168.99.100/posts
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.generate-ddl=true
+
+security.oauth2.client.clientId=
+security.oauth2.client.clientSecret=
+security.oauth2.client.accessTokenUri=https://www.googleapis.com/oauth2/v4/token
+security.oauth2.client.userAuthorizationUri=https://accounts.google.com/o/oauth2/v2/auth
+security.oauth2.client.clientAuthenticationScheme=form
+security.oauth2.client.scope=openid,email,profile
+security.oauth2.resource.userInfoUri=https://www.googleapis.com/oauth2/v3/userinfo
+security.oauth2.resource.preferTokenInfo=true
